--- a/index.html
+++ b/index.html
@@ -1239,8 +1239,9 @@
             </section>
 
             <div style="height: 110vh;background-color: black;">
-                <iframe style="border: none;border-color: transparent;" src="https://flooz.trade/embed/trade?swapDisabled=false&amp;swapToTokenAddress=0x3ee2200efb3400fabb9aacf31297cbdd1d435d47&amp;swapLockToToken=false&amp;onRampDisabled=true&amp;onRampAsDefault=false&amp;onRampDefaultAmount=200&amp;network=bsc&amp;blackMode=true&amp;primaryColor=green&amp;roundedCorners=10&amp;padding=20" width="1200" height="700" border-radius="10" frameborder="0"></iframe>						
-
+                <center>
+                <iframe style="border: none;border-color: transparent;" src="https://flooz.trade/embed/trade?swapDisabled=false&amp;swapToTokenAddress=0x3ee2200efb3400fabb9aacf31297cbdd1d435d47&amp;swapLockToToken=false&amp;onRampDisabled=true&amp;onRampAsDefault=false&amp;onRampDefaultAmount=200&amp;network=bsc&amp;blackMode=true&amp;primaryColor=green&amp;roundedCorners=10&amp;padding=20" width="700" height="700" border-radius="10" frameborder="0"></iframe>						
+ </center>
             </div>
 
            <!-- <section class="tf-section team">
