--- a/index.html
+++ b/index.html
@@ -1240,7 +1240,7 @@
 
             <div style="height: 110vh;background-color: black;">
                 <center>
-                <iframe style="border: none;border-color: transparent;" src="https://flooz.trade/embed/trade?swapDisabled=false&amp;swapToTokenAddress=0x3ee2200efb3400fabb9aacf31297cbdd1d435d47&amp;swapLockToToken=false&amp;onRampDisabled=true&amp;onRampAsDefault=false&amp;onRampDefaultAmount=200&amp;network=bsc&amp;blackMode=true&amp;primaryColor=green&amp;roundedCorners=10&amp;padding=20" width="500" height="700" border-radius="10" frameborder="0"></iframe>						
+                <iframe style="border: none;border-color: transparent;" src="https://flooz.trade/embed/trade?swapDisabled=false&amp;swapToTokenAddress=0x3ee2200efb3400fabb9aacf31297cbdd1d435d47&amp;swapLockToToken=false&amp;onRampDisabled=true&amp;onRampAsDefault=false&amp;onRampDefaultAmount=200&amp;network=bsc&amp;blackMode=true&amp;primaryColor=green&amp;roundedCorners=10&amp;padding=20" width="400" height="600" border-radius="10" frameborder="0"></iframe>						
  </center>
             </div>
 
@@ -1373,7 +1373,7 @@
                    <div class="row">
                         <div class="col-md-12 ">
                             <div class="tf-heading mb60 wow fadeInUp">
-                                <h2 class="heading"><br>FAQS</h2>
+                                <h2 class="heading"><br><br>FAQS</h2>
                             </div>
                         </div> 
                         <div class="col-lg-6 col-md-12">
